--- a/package.json
+++ b/package.json
@@ -3,16 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.0",
+    "@mui/styled-engine": "^7.1.0",
+    "@react-pdf/renderer": "^4.3.0",
+    "@supabase/supabase-js": "^2.49.4",
+    "chart.js": "^4.4.9",
     "cra-template": "1.2.0",
-    "firebase": "^11.3.0",
+    "date-fns": "^4.1.0",
+    "firebase": "^9.23.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.6",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.3",
-    "web-vitals": "^4.2.4"
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.2",
+    "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
