--- a/package.json
+++ b/package.json
@@ -13,13 +13,14 @@
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
     "firebase": "^9.23.0",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-github-calendar": "^4.5.6",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
@@ -49,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint-plugin-react-refresh": "^0.4.20"
   }
 }
