--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "date-fns": "^4.1.0",
     "firebase": "^9.23.0",
     "framer-motion": "^12.19.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^19.0.0",
     "react-github-calendar": "^4.5.6",
     "react-icons": "^5.4.0",
