--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/material": "^7.1.0",
@@ -15,17 +18,25 @@
     "firebase": "^9.23.0",
     "framer-motion": "^12.19.1",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
-    "react": "^19.0.0",
+    "moment": "^2.30.1",
+    "react-big-calendar": "^1.19.4",
+    "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
-    "react-dom": "^19.0.0",
+    "react-datepicker": "^8.4.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "react-feather": "^2.0.10",
     "react-github-calendar": "^4.5.6",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.2",
+    "styled-components": "^6.1.19",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5"
   },
