--- a/package.json
+++ b/package.json
@@ -3,12 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-quill": "^2.0.0",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@mui/styled-engine": "^7.1.0",
     "@react-pdf/renderer": "^4.3.0",
     "@supabase/supabase-js": "^2.49.4",
@@ -21,6 +19,7 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
+    "react": "^18.2.0",
     "react-big-calendar": "^1.19.4",
     "react-bootstrap": "^2.10.10",
     "react-chartjs-2": "^5.3.0",
@@ -28,9 +27,11 @@
     "react-datepicker": "^8.4.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-github-calendar": "^4.5.6",
     "react-icons": "^5.4.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.2",
